# colorGame

./: .gitignore  CMakeLists.txt  Point.cpp  Point.h  Universe.cpp  Universe.h  main.cpp  vecadd.cpp
manaCalc/: CMakeLists.txt  Deck.cpp  Deck.h  Mana.cpp  Mana.h  main.cpp  mainCalc.cpp  manaCalc.cpp
src/: CMakeLists.txt  Universe.cpp  Universe.h  kernel.cl  main.cpp  vecadd.cpp
src/test/: test.cpp
test/: test.cpp
vulkanTut/: CMakeLists.txt  main.cpp  readme
vulkanTut/test/: test.cpp
